--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="main_header">
             <!-- Navigation -->
             <nav class="navigation">
-                <a href="index.html"><img src="img/kobo_logo.png" alt="kobo logo"></a>
+                <a href="index.html" class="logo"><img src="img/kobo_logo.png" alt="kobo logo"></a>
                 <ul class="nav1">
                     <li class="parent1"><a href="#">Kobo360</a>
                         <ul class="child1">
